Bug 137162 - Web Replay: Playback position updates should be sent before the next event loop input is dispatched
Summary: Web Replay: Playback position updates should be sent before the next event lo...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Web Inspector (show other bugs)
Version: 528+ (Nightly build)
Hardware: All All
: P2 Normal
Assignee: Brian Burg
URL:
Keywords: InRadar
Depends on:
Blocks: WebReplayUI 137078 137083
  Show dependency treegraph
 
Reported: 2014-09-26 16:44 PDT by Brian Burg
Modified: 2014-09-27 15:17 PDT (History)
5 users (show)

See Also:


Attachments
WIP 0a (1.76 KB, patch)
2014-09-26 16:47 PDT, Brian Burg
no flags Details | Formatted Diff | Diff
WIP 0b (876 bytes, patch)
2014-09-26 16:48 PDT, Brian Burg
no flags Details | Formatted Diff | Diff
WIP 0c (2.07 KB, patch)
2014-09-26 16:48 PDT, Brian Burg
no flags Details | Formatted Diff | Diff
Patch (6.97 KB, patch)
2014-09-26 17:48 PDT, Brian Burg
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Brian Burg 2014-09-26 16:44:18 PDT
To drive updates to playback position in the UI we send ReplayPosition coordinates as the backend dispatches inputs.
However, right now the semantics of being at a ReplayPosition is currently muddy. The update is currently sent *after*
the input at the offset is dispatched. This leads to unexpected results if the debugger pauses while the input is dispatched,
and the frontend has a stale playback position when the debugger pauses.

What it should mean is that for ReplayPosition(segmentOffset=n, inputOffset=m), the backend is about to dispatch input m,
but has not yet begun to do so. Thus, any subsequent page execution events (profiling, debugger pauses, etc) are caused by
m being dispatched.
Comment 1 Radar WebKit Bug Importer 2014-09-26 16:44:32 PDT
<rdar://problem/18475656>
Comment 2 Brian Burg 2014-09-26 16:47:37 PDT
Created attachment 238748 [details]
WIP 0a
Comment 3 Brian Burg 2014-09-26 16:48:10 PDT
Created attachment 238749 [details]
WIP 0b
Comment 4 Brian Burg 2014-09-26 16:48:36 PDT
Created attachment 238750 [details]
WIP 0c
Comment 5 Brian Burg 2014-09-26 17:48:50 PDT
Created attachment 238751 [details]
Patch
Comment 6 WebKit Commit Bot 2014-09-27 15:17:35 PDT
Comment on attachment 238751 [details]
Patch

Clearing flags on attachment: 238751

Committed r174037: <http://trac.webkit.org/changeset/174037>
Comment 7 WebKit Commit Bot 2014-09-27 15:17:38 PDT
All reviewed patches have been landed.  Closing bug.